tests/compile_fail/const_wrong_position.rs
use siunit::alias_units;

alias_units! {
    const pub Foo => ("const before vis, wrong position"),
}

fn main() {}
