tests/compile_fail/const_wrong_position.stderr
error: no rules expected keyword `pub`
 --> tests/compile_fail/const_wrong_position.rs:4:11
  |
4 |     const pub Foo => ("const before vis, wrong position"),
  |           ^^^ no rules expected this token in macro call
  |
note: while trying to match `=>`
 --> src/macros.rs
  |
  |     ($(|)?$pre:vis $name:ident => ($doc:literal $(, $dim:path)*)$(,)?) => {
  |                                ^^
